# todolist

./: .gitignore  Dockerfile  README.md  README.rst  docker-compose-dev.yaml  docker-compose.yaml  example.sh  generate-api-doc.py  mongo-init.js  optic.yml  pyproject.toml  setup.cfg  tox.ini
.optic/api/: specification.json
doc/: generate-api-doc.py  open-api-spec.json  postman_collection.json
tests/: conftest.py  helpers.py  test_accounts.py  test_eve_auth.py  test_functional.py  test_functional_auth.py  test_login.py  test_tasks.py  test_todolist.py
tests/app/: conftest.py  helpers.py  test_accounts.py  test_app.py  test_auth.py
tests/app/tasks/: test_add_task.py  test_list_tasks.py  test_remove_task.py  test_update_task.py
tests/auth/: test_functional.py  test_password.py  test_tokens.py
tests/mongo/: test_ordered_collections.py
tests/tasks/: test_add_task.py  test_list_tasks.py  test_remove_task.py  test_update_task.py
todolist/: app.py  login.py  run.py  settings.py
todolist/app/: __init__.py  auth.py  positions.py  settings.py
todolist/auth/: passwords.py  tokens.py
todolist/mongo/: ordered_collection.py
