[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["nunocosta <91nunocosta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Eve = "^1.1.5"
PyJWT = "^2.0.1"
bcrypt = "^3.2.0"
Eve-Swagger = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
black = {version = "^20.8b1", allow-prereleases = true}
freezegun = "^1.1.0"
rope = "^0.18.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
